# cruciverbal

./: .gitignore  Cargo.toml  README.md  sample_puzzle.json  test_load.rs
.claude/: CLAUDE.md
core/: Cargo.toml
core/src/: clue.rs  crossword.rs  direction.rs  generator.rs  grid.rs  lib.rs
core/tests/: test_generator.rs
providers/: Cargo.toml
providers/examples/: sample_puzzle.rs
providers/examples/data/: Puzzle1148Freestyle1069.puz
providers/src/: errors.rs  lib.rs  util.rs
providers/src/formats/: crossword_compiler.rs  mod.rs
providers/src/providers/: daily_pop.rs  guardian.rs  lovatts_cryptic.rs  mod.rs  puzzleexperts.rs  simply_daily.rs  universal.rs  usa_today.rs  wapo.rs
tui/: Cargo.toml
tui/src/: app.rs  editor.rs  events.rs  lib.rs  main.rs  menu.rs  preferences.rs  save.rs  theme.rs  ui.rs
tui/src/views/: help.rs  menu.rs  mod.rs  theme_select.rs
tui/src/views/game/: boxchars.rs  cell.rs  constants.rs  grid.rs  mod.rs
tui/src/widgets/: mod.rs  puzzle.rs
