[workspace]
resolver = "2"
members = ["tui", "providers"]
default-members = ["tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["erhant"]
license = "MIT"
repository = "https://github.com/erhant/cruciverbal"
description = "Terminal-based crossword puzzle player."
readme = "README.md"
keywords = ["crossword", "puzzle", "tui", "terminal", "game"]
categories = ["command-line-utilities", "games"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
puz-parse = { version = "0.1.2", features = ["json", "serde"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
color-eyre = "0.6.3"
