[package]
name = "cruciverbal-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
puz-parse.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = "0.4"
