[package]
name = "cruciverbal-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
quick-xml = { version = "0.37", features = ["serialize"] }

reqwest.workspace = true
puz-parse.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde_json.workspace = true
chrono.workspace = true
