[package]
name = "cruciverbal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
color-eyre = "0.6.3"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
dirs = "5.0"

# global workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
puz-parse.workspace = true
chrono.workspace = true


# inter-workspace dependencies
# cruciverbal-core = { path = "../core" }
cruciverbal-providers = { path = "../providers" }

[lints.clippy]
uninlined_format_args = "allow"
